--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pxtone",
-  "description": "Play Pxtone Collage files in Browser",
-  "version": "1.0.3",
+  "description": "Play Pxtone Collage files in Web Audio API",
+  "version": "1.1.0",
   "author": "Kenta Moriuchi (http://moriken.kimamass.com/)",
   "bugs": {
     "url": "https://github.com/petamoriken/PxtoneJS/issues"
@@ -12,16 +12,20 @@
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
-    "babel-eslint": "^4.1.6",
+    "babel-eslint": "^5.0.0",
     "babel-plugin-add-module-exports": "^0.1.1",
     "babel-plugin-transform-async-to-generator": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-plugin-transform-strict-mode": "^6.3.13",
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
-    "eslint": "^1.10.3",
+    "browserify": "^13.0.0",
+    "eslint": "^2.1.0",
     "uglify-js": "^2.6.1"
+  },
+  "optionalDependencies": {
+    "text-encoding": "^0.5.2",
+    "web-audio-api": ">=0.2.2"
   },
   "files": [
     "README.md",
@@ -35,12 +39,10 @@
   "homepage": "https://github.com/petamoriken/PxtoneJS",
   "keywords": [
     "PxtoneCollage",
-    "webaudio"
+    "webaudio",
+    "web-audio-api"
   ],
-  "license": {
-    "type": "MIT",
-    "url": "http://petamoriken.mit-license.org/2016"
-  },
+  "license": "MIT",
   "main": "index.js",
   "repository": {
     "type": "git",
