--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
     "url": "https://github.com/petamoriken/PxtoneJS/issues"
   },
   "dependencies": {
+    "babel-preset-latest": "^6.14.0",
     "babel-runtime": "^6.3.19",
     "promise-decode-audio-data": "^0.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
-    "babel-eslint": "^5.0.0",
-    "babel-plugin-add-module-exports": "^0.1.1",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-async-to-generator": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-plugin-transform-strict-mode": "^6.3.13",
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "eslint": "^2.1.0",
+    "eslint": "^3.4.0",
     "uglify-js": "^2.6.1"
   },
   "optionalDependencies": {
-    "text-encoding": "^0.5.2",
+    "text-encoding": "^0.6.0",
     "web-audio-api": ">=0.2.2"
   },
   "browser": {
