--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "eslint": "^3.4.0",
+    "optimize-js": "^1.0.1",
     "uglify-js": "^2.6.1"
   },
   "optionalDependencies": {
