--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pxtone",
   "description": "Play Pxtone Collage files in Web Audio API",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "author": "Kenta Moriuchi (http://moriken.kimamass.com/)",
   "bugs": {
     "url": "https://github.com/petamoriken/PxtoneJS/issues"
@@ -52,7 +52,8 @@
     "url": "https://github.com/petamoriken/PxtoneJS.git"
   },
   "scripts": {
-    "build": "make clean && make",
+    "clean": "make clean",
+    "build": "make",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
