--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.3.19",
-    "promise-decode-audio-data": "^0.2.0"
+    "promise-decode-audio-data": "^0.2.0",
+    "streams": "petamoriken/streams"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
