--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,27 @@
 .DS_Store
 .vscode
 
-node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
 
-lib/
+# Coverage directory used by tools like istanbul
+coverage
+
+# Dependency directories
+node_modules
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+lib/*
+!lib/.keep
+
 temp/
-build/
 
-src/pxtnDecoder.js
+build/*
+!build/.keep
