Add pxtn-decoder package

--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,4 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
-lib/*
-!lib/.keep
-
-temp/
-
-build/*
-!build/.keep
+packages/pxtn-decoder/dist
